GC02-Commit Initial_index_HTML

--- a/nicepage.css
+++ b/nicepage.css
@@ -33676,39 +33676,47 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 175px;
-}
-
-.u-header .u-image-1 {
-  margin: -16px auto 0 0;
-}
-
-.u-header .u-logo-image-1 {
-  max-width: 254px;
-  max-height: 254px;
+  min-height: 225px;
 }
 
 .u-header .u-menu-1 {
-  margin: -155px 0 60px auto;
+  margin: 95px -20px 0 auto;
 }
 
 .u-header .u-nav-1 {
   font-size: 1rem;
   letter-spacing: 0px;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+.u-header .u-sidenav-1 {
+  width: 150px;
+  margin-right: 0;
+  margin-left: 0;
 }
 
 .u-header .u-nav-2 {
   font-size: 1.25rem;
 }
-@media (max-width: 1199px) {
-  .u-header .u-image-1 {
-    width: 64px;
-    height: 32px;
-  }
 
+.u-header .u-image-1 {
+  margin: -130px auto 0 12px;
+}
+
+.u-header .u-logo-image-1 {
+  max-width: 307px;
+  max-height: 307px;
+}
+@media (max-width: 1199px) {
   .u-header .u-menu-1 {
     width: auto;
-    margin-top: -155px;
+  }
+
+  .u-header .u-image-1 {
+    margin-top: -130px;
+    width: 64px;
+    height: 32px;
   }
 }
 
